# spotifast

./: .cache  .cookiecutter.json  .env.template  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  noxfile.py  pyproject.toml
docs/: conf.py  index.md  reference.md  usage.md
src/coding_challenge/: __init__.py  endpoints.py  main.py  models.py  settings.py  utils.py
src/spotifast/: const.py  endpoints.py  main.py  settings.py  utils.py
src/spotifast/templates/: base.html
tests/: __init__.py  test_main.py
